[gd_scene load_steps=8 format=3 uid="uid://cjnj4bl8ahkoo"]

[ext_resource type="Script" path="res://escenas/Nota/nota.gd" id="1_a1xeo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4vjqc"]
bg_color = Color(0.0901961, 0.0941176, 0.109804, 1)
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_5ag6v"]
font_size = 25
font_color = Color(0.588235, 0.588235, 0.588235, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v282v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ihsni"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lo1qm"]
bg_color = Color(0.611765, 0.603922, 0.701961, 0.596078)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qd1mr"]

[node name="PanelNota1" type="Panel"]
custom_minimum_size = Vector2(0, 120)
offset_left = 122.0
offset_top = 119.0
offset_right = 122.0
offset_bottom = 239.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_4vjqc")
script = ExtResource("1_a1xeo")

[node name="LabelFechaModificacion" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -31.0
offset_bottom = 31.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 30
text = "5 nov.
2023"
label_settings = SubResource("LabelSettings_5ag6v")
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ColorRect" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_horizontal = 0
color = Color(0.129412, 0.137255, 0.160784, 1)

[node name="LabelTitulo" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 35
text = "Nombre de nota"
vertical_alignment = 1

[node name="ButtonNotaEnlistada" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_v282v")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ihsni")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lo1qm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qd1mr")

[connection signal="button_up" from="ButtonNotaEnlistada" to="." method="_on_button_nota_enlistada_button_up"]
